# pfs-mcdm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
pfs_mcdm/: __init__.py  mcdm.py  pfn.py  promethee.py  simple_aggregation.py  topsis.py
src/: __init__.py  mcdm.py  pfn.py  promethee.py  simple_aggregation.py  topsis.py
src/pfs_mcdm/: __init__.py  mcdm.py  promethee.py  simple_aggregation.py  topsis.py
test/: test.py
